Fixed minor issues on landing page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RevAuto - Car Dealer & Services Html Template</title>
+    <title>RevAuto - Car Showroom and Accessories Html Template</title>
     <!-- Favicon img -->
     <link rel="shortcut icon" href="landing/assets/images/favicon.svg" />
     <!-- Bootstrap min css -->
@@ -147,15 +147,15 @@
               data-wow-delay="200ms"
               data-wow-duration="1000ms"
             >
-              RevAuto - Car Dealer & Services Html Template
+              RevAuto - Car Showroom and Accessories Html Template
             </h1>
             <p
               class="mt-20 wow fadeInUp"
               data-wow-delay="400ms"
               data-wow-duration="1000ms"
             >
-              This lovely niche Template is built and suitable for <br />IT
-              Solution & Technology HTML Template.
+              The template has been Created especially for automotive showrooms,
+              car resellers, Car accessories e-commerce, auto motor retailers.
             </p>
             <div class="d-flex align-items-center gap-4 mt-40">
               <a
@@ -277,7 +277,7 @@
               data-wow-delay="200ms"
               data-wow-duration="1000ms"
             >
-              Collection of creative and <br />
+              Creative Homepage and <br />
               exclusive layouts
             </h2>
             <p
@@ -363,7 +363,7 @@
               <div class="demo-area">
                 <a
                   target="_blank"
-                  href="main-files/index-3.html"
+                  href="main-files/index-4.html"
                   class="preview__item image d-block"
                 >
                   <img
@@ -374,7 +374,7 @@
                 <h3 class="text-center">
                   <a
                     target="_blank"
-                    href="main-files/index-3.html"
+                    href="main-files/index-4.html"
                     class="primary-hover text-capitalize mt-30"
                     >Home page 04</a
                   >
@@ -591,6 +591,7 @@
               </h3>
             </div>
             <h2 class="inner-pages-h3 mt-70 fw-700">Cart Pages</h2>
+
             <div class="col-lg-3">
               <a
                 target="_blank"
@@ -611,6 +612,7 @@
                 >
               </h3>
             </div>
+
             <div class="col-lg-3">
               <a
                 target="_blank"
@@ -631,6 +633,7 @@
                 >
               </h3>
             </div>
+
             <div class="col-lg-3">
               <a
                 target="_blank"
@@ -651,6 +654,28 @@
                 >
               </h3>
             </div>
+
+            <div class="col-lg-3">
+              <a
+                target="_blank"
+                href="main-files/checkout.html"
+                class="preview__item image d-block"
+              >
+                <img
+                  src="landing/assets/images/landing-images/preview-inner23.png"
+                  alt="image"
+                />
+              </a>
+              <h3 class="text-center">
+                <a
+                  target="_blank"
+                  href="main-files/checkout.html"
+                  class="primary-hover text-capitalize mt-30"
+                  >Checkout</a
+                >
+              </h3>
+            </div>
+
             <h2 class="inner-pages-h3 fw-700 mt-70">User Dashboard Pages</h2>
             <div class="col-lg-3">
               <a
@@ -955,27 +980,6 @@
                   href="main-files/contact.html"
                   class="primary-hover text-capitalize mt-30"
                   >Contact Us</a
-                >
-              </h3>
-            </div>
-
-            <div class="col-lg-3">
-              <a
-                target="_blank"
-                href="main-files/checkout.html"
-                class="preview__item image d-block"
-              >
-                <img
-                  src="landing/assets/images/landing-images/preview-inner23.png"
-                  alt="image"
-                />
-              </a>
-              <h3 class="text-center">
-                <a
-                  target="_blank"
-                  href="main-files/checkout.html"
-                  class="primary-hover text-capitalize mt-30"
-                  >Checkout</a
                 >
               </h3>
             </div>
