--- a/main-files/index-4.html
+++ b/main-files/index-4.html
@@ -293,13 +293,28 @@
                                   <div class="homemenu-thumb">
                                     <a href="index-3.html">
                                       <img
-                                        src="assets/img/homepage-3/navbar.png"
+                                        src="assets/img/header/home-5.png"
                                         alt="img"
                                       />
                                     </a>
                                   </div>
                                   <h4 class="homemenu-title">
                                     <a href="index-3.html">Home Page 03</a>
+                                  </h4>
+                                </div>
+                              </div>
+                              <div class="col-lg-3">
+                                <div class="homemenu">
+                                  <div class="homemenu-thumb">
+                                    <a href="index-4.html">
+                                      <img
+                                        src="assets/img/header/home-6.png"
+                                        alt="img"
+                                      />
+                                    </a>
+                                  </div>
+                                  <h4 class="homemenu-title">
+                                    <a href="index-4.html">Home Page 04</a>
                                   </h4>
                                 </div>
                               </div>
