Replace all old navbar

--- a/main-files/index-4.html
+++ b/main-files/index-4.html
@@ -405,6 +405,15 @@
                               </li>
                             </ul>
                           </li>
+                          <li class="has-dropdown">
+                            <a href="car-details.html">User Dashboard</a>
+                            <ul class="submenu">
+                              <li><a href="user-dashboard.html">Dashboard</a></li>
+                              <li><a href="order-history.html">Order History</a></li>
+                              <li><a href="order-details.html">Order Details</a></li>
+                              <li><a href="settings.html">Settings</a></li>
+                            </ul>
+                          </li>
                           <li><a href="faq.html">Faq's</a></li>
                           <li><a href="contact.html">Contact Us</a></li>
                           <li><a href="login.html">Log In</a></li>
