Update landing homepage name

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                     target="_blank"
                     href="main-files/index.html"
                     class="primary-hover text-capitalize mt-30"
-                    >Home page 01</a
+                    >Car Showroom V1</a
                   >
                 </h3>
               </div>
@@ -332,7 +332,7 @@
                     target="_blank"
                     href="main-files/index-2.html"
                     class="primary-hover text-capitalize mt-30"
-                    >Home page 02</a
+                    >Car Showroom V2</a
                   >
                 </h3>
               </div>
@@ -354,7 +354,7 @@
                     target="_blank"
                     href="main-files/index-3.html"
                     class="primary-hover text-capitalize mt-30"
-                    >Home page 03</a
+                    >Car Showroom V3</a
                   >
                 </h3>
               </div>
@@ -376,7 +376,7 @@
                     target="_blank"
                     href="main-files/index-4.html"
                     class="primary-hover text-capitalize mt-30"
-                    >Home page 04</a
+                    >Car Showroom V4</a
                   >
                 </h3>
               </div>
@@ -398,7 +398,7 @@
                     target="_blank"
                     href="main-files/home-landing.html"
                     class="primary-hover text-capitalize mt-30"
-                    >Car Accessories 01</a
+                    >Car Accessories V1</a
                   >
                 </h3>
               </div>
@@ -420,7 +420,7 @@
                     target="_blank"
                     href="main-files/home-landing-2.html"
                     class="primary-hover text-capitalize mt-30"
-                    >Car Accessories 02</a
+                    >Car Accessories V2</a
                   >
                 </h3>
               </div>
