--- a/main-files/dashboard/index.html
+++ b/main-files/dashboard/index.html
@@ -115,7 +115,19 @@
         </nav>
 
         <!-- main Content started -->
-        <div class="main-content"></div>
+        <div class="main-content">
+          <div
+            class="welcome-content d-flex align-items-center justify-content-between"
+          >
+            <h3>Welcome back, Chris</h3>
+            <div class="d-flex align-items-center gap-3 content-filters">
+              <button>
+                Today <i class="fa-sharp fa-solid fa-chevron-up"></i>
+              </button>
+              <button>Customize Widgets</button>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="car-right-sidebar"></div>
     </main>
