--- a/main-files/dashboard/index.html
+++ b/main-files/dashboard/index.html
@@ -296,6 +296,203 @@
                 </div>
               </div>
             </div>
+
+            <div class="col-xl-8">
+              <div class="revenue-table">
+                <div
+                  class="revenue-table-header d-flex justify-content-between align-items-center mb-3"
+                >
+                  <div class="d-flex align-items-center gap-4">
+                    <h5>Revenue by Region</h5>
+                    <div class="revenue-line"></div>
+                    <button class="filter-button">
+                      Today <i class="fa-sharp fa-solid fa-chevron-up"></i>
+                    </button>
+                  </div>
+                  <button class="revenue-more-button">
+                    <i class="fa-solid fa-ellipsis"></i>
+                  </button>
+                </div>
+                <table
+                  class="revenue-table-data table table-responsive table-bordered border-light-subtle"
+                >
+                  <thead>
+                    <tr>
+                      <th>Product Name</th>
+                      <th>Price</th>
+                      <th>Sold</th>
+                      <th>Sales</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>
+                        <img
+                          src="assets/images/overviews/product-1.png"
+                          alt="RevAuto"
+                        />
+                        <span>OE Replica Wheels</span>
+                      </td>
+                      <td>$45.00</td>
+                      <td>82</td>
+                      <td>$3,692.00</td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <img
+                          src="assets/images/overviews/product-2.png"
+                          alt="RevAuto"
+                        />
+                        <span>Ford Mustang</span>
+                      </td>
+                      <td>$60.00</td>
+                      <td>
+                        <span class="btn btn-success btn-sm">Available</span>
+                      </td>
+                      <td>
+                        <span class="btn btn-success btn-sm">Available</span>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <img
+                          src="assets/images/overviews/product-3.png"
+                          alt="RevAuto"
+                        />
+                        <span>Steering Wheel Cover</span>
+                      </td>
+                      <td>$35.00</td>
+                      <td>16</td>
+                      <td>$560.45</td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <img
+                          src="assets/images/overviews/product-4.png"
+                          alt="RevAuto"
+                        />
+                        <span>Steering Wheel Cover</span>
+                      </td>
+                      <td>$50.00</td>
+                      <td>
+                        <span class="btn btn-sm btn-primary">Reserved</span>
+                      </td>
+                      <td>
+                        <span class="btn btn-sm btn-info text-white"
+                          >In Stock</span
+                        >
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <img
+                          src="assets/images/overviews/product-5.png"
+                          alt="RevAuto"
+                        />
+                        <span>OE Replica Wheels</span>
+                      </td>
+                      <td>$55.00</td>
+                      <td>28</td>
+                      <td>$1,260.35</td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <img
+                          src="assets/images/overviews/product-6.png"
+                          alt="RevAuto"
+                        />
+                        <span>Brake Conversion Kit</span>
+                      </td>
+                      <td>$100.99</td>
+                      <td>
+                        <span class="btn btn-danger btn-sm">Out of Stock</span>
+                      </td>
+                      <td>
+                        <span class="btn btn-sm btn-secondary">Back-Order</span>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <img
+                          src="assets/images/overviews/product-7.png"
+                          alt="RevAuto"
+                        />
+                        <span>Shock Mount Insulator</span>
+                      </td>
+                      <td>$99.99</td>
+                      <td>9</td>
+                      <td>$333.33</td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <img
+                          src="assets/images/overviews/product-8.png"
+                          alt="RevAuto"
+                        />
+                        <span>Steel Rim 9×22.5</span>
+                      </td>
+                      <td>$50.11</td>
+                      <td>
+                        <span class="btn btn-sm text-white btn-warning"
+                          >Limited Stock</span
+                        >
+                      </td>
+                      <td>
+                        <span class="btn btn-sm btn-light">Sold Out</span>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <img
+                          src="assets/images/overviews/product-9.png"
+                          alt="RevAuto"
+                        />
+                        <span>Brake Disc For BMW</span>
+                      </td>
+                      <td>$200.11</td>
+                      <td>
+                        <span class="btn btn-sm text-white btn-warning"
+                          >Limited Stock</span
+                        >
+                      </td>
+                      <td>
+                        <span class="btn btn-sm text-white btn-warning"
+                          >Limited Stock</span
+                        >
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <img
+                          src="assets/images/overviews/product-10.png"
+                          alt="RevAuto"
+                        />
+                        <span>Brake Conversion Kit</span>
+                      </td>
+                      <td>$188.45</td>
+                      <td>
+                        <span class="btn btn-sm btn-secondary">Back-Order</span>
+                      </td>
+                      <td>
+                        <span class="btn btn-sm btn-secondary">Back-Order</span>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>
+                        <img
+                          src="assets/images/overviews/product-10.png"
+                          alt="RevAuto"
+                        />
+                        <span>Wheel Bearing Retainer</span>
+                      </td>
+                      <td>$33.45</td>
+                      <td>7</td>
+                      <td>$245.00</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
             <!-- right side content -->
             <div class="col-xl-4"></div>
           </div>
