--- a/main-files/dashboard/index.html
+++ b/main-files/dashboard/index.html
@@ -295,10 +295,9 @@
                   <canvas id="myChart"></canvas>
                 </div>
               </div>
-            </div>
 
-            <div class="col-xl-8">
-              <div class="revenue-table">
+              <!-- revenue table -->
+              <div class="revenue-table mt-3">
                 <div
                   class="revenue-table-header d-flex justify-content-between align-items-center mb-3"
                 >
@@ -480,7 +479,7 @@
                     <tr>
                       <td>
                         <img
-                          src="assets/images/overviews/product-10.png"
+                          src="assets/images/overviews/product-11.png"
                           alt="RevAuto"
                         />
                         <span>Wheel Bearing Retainer</span>
@@ -493,8 +492,18 @@
                 </table>
               </div>
             </div>
+
             <!-- right side content -->
-            <div class="col-xl-4"></div>
+            <div class="col-xl-4">
+              <div class="row g-3">
+                <div class="col-12">
+                  <!-- Revenue by Region -->
+                  <div class="revenue-by-region">
+                    <!--  -->
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
