Fixed import warning for sass

--- a/main-files/dashboard/index.html
+++ b/main-files/dashboard/index.html
@@ -499,7 +499,12 @@
                 <div class="col-12">
                   <!-- Revenue by Region -->
                   <div class="revenue-by-region">
-                    <!--  -->
+                    <div class="revenue-chart">
+                      <canvas id="worldMapChart"></canvas>
+                    </div>
+                    <div class="revenue-list">
+                      <!--  -->
+                    </div>
                   </div>
                 </div>
               </div>
