--- a/main-files/dashboard/index.html
+++ b/main-files/dashboard/index.html
@@ -503,7 +503,84 @@
                       <canvas id="worldMapChart"></canvas>
                     </div>
                     <div class="revenue-list">
-                      <!--  -->
+                      <ul>
+                        <li>
+                          <div>
+                            <span class="country">United States</span>
+                            <span class="percentage">59%</span>
+                          </div>
+                          <div
+                            class="progress"
+                            role="progressbar"
+                            aria-label="Basic example"
+                            aria-valuenow="75"
+                            aria-valuemin="0"
+                            aria-valuemax="100"
+                          >
+                            <div
+                              class="progress-bar h-100"
+                              style="width: 59%"
+                            ></div>
+                          </div>
+                        </li>
+                        <li>
+                          <div>
+                            <span class="country">Germany</span>
+                            <span class="percentage">12%</span>
+                          </div>
+                          <div
+                            class="progress"
+                            role="progressbar"
+                            aria-label="Basic example"
+                            aria-valuenow="75"
+                            aria-valuemin="0"
+                            aria-valuemax="100"
+                          >
+                            <div
+                              class="progress-bar h-100"
+                              style="width: 12%"
+                            ></div>
+                          </div>
+                        </li>
+                        <li>
+                          <div>
+                            <span class="country">United Kingdom</span>
+                            <span class="percentage">8%</span>
+                          </div>
+                          <div
+                            class="progress"
+                            role="progressbar"
+                            aria-label="Basic example"
+                            aria-valuenow="75"
+                            aria-valuemin="0"
+                            aria-valuemax="100"
+                          >
+                            <div
+                              class="progress-bar h-100"
+                              style="width: 8%"
+                            ></div>
+                          </div>
+                        </li>
+                        <li>
+                          <div>
+                            <span class="country">Canada</span>
+                            <span class="percentage">6%</span>
+                          </div>
+                          <div
+                            class="progress"
+                            role="progressbar"
+                            aria-label="Basic example"
+                            aria-valuenow="75"
+                            aria-valuemin="0"
+                            aria-valuemax="100"
+                          >
+                            <div
+                              class="progress-bar h-100"
+                              style="width: 6%"
+                            ></div>
+                          </div>
+                        </li>
+                      </ul>
                     </div>
                   </div>
                 </div>
@@ -538,6 +615,10 @@
     <script src="assets/js/wow.min.js"></script>
     <!-- chartjs -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <!-- Chart.js Geo Plugin v3.0.1 -->
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-chart-geo@3.0.1"></script>
+    <!-- TopoJSON -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/3.0.2/topojson.min.js"></script>
     <!--<< Main.js >>-->
     <script src="assets/js/main.js"></script>
   </body>
