--- a/main-files/dashboard/index.html
+++ b/main-files/dashboard/index.html
@@ -346,10 +346,10 @@
                       </td>
                       <td>$60.00</td>
                       <td>
-                        <span class="btn btn-success btn-sm">Available</span>
+                        <span class="chip chip-available">Available</span>
                       </td>
                       <td>
-                        <span class="btn btn-success btn-sm">Available</span>
+                        <span class="chip chip-available">Available</span>
                       </td>
                     </tr>
                     <tr>
@@ -374,12 +374,10 @@
                       </td>
                       <td>$50.00</td>
                       <td>
-                        <span class="btn btn-sm btn-primary">Reserved</span>
+                        <span class="chip chip-reserved">Reserved</span>
                       </td>
                       <td>
-                        <span class="btn btn-sm btn-info text-white"
-                          >In Stock</span
-                        >
+                        <span class="chip chip-instock">In Stock</span>
                       </td>
                     </tr>
                     <tr>
@@ -404,10 +402,10 @@
                       </td>
                       <td>$100.99</td>
                       <td>
-                        <span class="btn btn-danger btn-sm">Out of Stock</span>
+                        <span class="chip chip-outstock">Out of Stock</span>
                       </td>
                       <td>
-                        <span class="btn btn-sm btn-secondary">Back-Order</span>
+                        <span class="chip chip-backorder">Back-Order</span>
                       </td>
                     </tr>
                     <tr>
@@ -432,12 +430,10 @@
                       </td>
                       <td>$50.11</td>
                       <td>
-                        <span class="btn btn-sm text-white btn-warning"
-                          >Limited Stock</span
-                        >
+                        <span class="chip chip-limited">Limited Stock</span>
                       </td>
                       <td>
-                        <span class="btn btn-sm btn-light">Sold Out</span>
+                        <span class="chip chip-soldout">Sold Out</span>
                       </td>
                     </tr>
                     <tr>
@@ -450,14 +446,10 @@
                       </td>
                       <td>$200.11</td>
                       <td>
-                        <span class="btn btn-sm text-white btn-warning"
-                          >Limited Stock</span
-                        >
+                        <span class="chip chip-limited">Limited Stock</span>
                       </td>
                       <td>
-                        <span class="btn btn-sm text-white btn-warning"
-                          >Limited Stock</span
-                        >
+                        <span class="chip chip-limited">Limited Stock</span>
                       </td>
                     </tr>
                     <tr>
@@ -470,10 +462,10 @@
                       </td>
                       <td>$188.45</td>
                       <td>
-                        <span class="btn btn-sm btn-secondary">Back-Order</span>
+                        <span class="chip chip-backorder">Back-Order</span>
                       </td>
                       <td>
-                        <span class="btn btn-sm btn-secondary">Back-Order</span>
+                        <span class="chip chip-backorder">Back-Order</span>
                       </td>
                     </tr>
                     <tr>
@@ -496,9 +488,12 @@
             <!-- right side content -->
             <div class="col-xl-4">
               <div class="row g-3">
+                <!-- Revenue by Region -->
                 <div class="col-12">
-                  <!-- Revenue by Region -->
                   <div class="revenue-by-region">
+                    <div class="mb-2">
+                      <h5>Revenue by Region</h5>
+                    </div>
                     <div class="revenue-chart">
                       <canvas id="worldMapChart"></canvas>
                     </div>
@@ -563,6 +558,25 @@
                         </li>
                         <li>
                           <div>
+                            <span class="country">Bangladesh</span>
+                            <span class="percentage">7.8%</span>
+                          </div>
+                          <div
+                            class="progress"
+                            role="progressbar"
+                            aria-label="Basic example"
+                            aria-valuenow="75"
+                            aria-valuemin="0"
+                            aria-valuemax="100"
+                          >
+                            <div
+                              class="progress-bar h-100"
+                              style="width: 7.8%"
+                            ></div>
+                          </div>
+                        </li>
+                        <li>
+                          <div>
                             <span class="country">Canada</span>
                             <span class="percentage">6%</span>
                           </div>
@@ -584,11 +598,75 @@
                     </div>
                   </div>
                 </div>
+
+                <!-- revenue by brand -->
+                <div class="col-12">
+                  <div class="revenue-by-ads">
+                    <div class="mb-4">
+                      <h5>Revenue by Ads Camping</h5>
+                    </div>
+
+                    <div class="revenue-by-ads-chart">
+                      <canvas id="revenueByAdsChart"></canvas>
+                    </div>
+
+                    <div class="revenue-by-chart-list">
+                      <ul>
+                        <li class="d-flex align-items-center gap-1">
+                          <div class="revenue-by-ads-circle"></div>
+                          <div
+                            class="d-flex align-items-center justify-content-between flex-fill"
+                          >
+                            <span class="ads">Fashion Ads</span>
+                            <span class="count">38.6k Reach</span>
+                          </div>
+                        </li>
+                        <li class="d-flex align-items-center gap-1">
+                          <div class="revenue-by-ads-circle"></div>
+                          <div
+                            class="d-flex align-items-center justify-content-between flex-fill"
+                          >
+                            <span class="ads">Gadget Ads</span>
+                            <span class="count">30.8k Reach</span>
+                          </div>
+                        </li>
+                        <li class="d-flex align-items-center gap-1">
+                          <div class="revenue-by-ads-circle"></div>
+                          <div
+                            class="d-flex align-items-center justify-content-between flex-fill"
+                          >
+                            <span class="ads">Books Ads</span>
+                            <span class="count">22.5k Reach</span>
+                          </div>
+                        </li>
+                        <li class="d-flex align-items-center gap-1">
+                          <div class="revenue-by-ads-circle"></div>
+                          <div
+                            class="d-flex align-items-center justify-content-between flex-fill"
+                          >
+                            <span class="ads">Sports Ads</span>
+                            <span class="count">28.99k Reach</span>
+                          </div>
+                        </li>
+                        <li class="d-flex align-items-center gap-1">
+                          <div class="revenue-by-ads-circle"></div>
+                          <div
+                            class="d-flex align-items-center justify-content-between flex-fill"
+                          >
+                            <span class="ads">Grocery Ads</span>
+                            <span class="count">20.10k Reach</span>
+                          </div>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
+
       <!-- right right sidebar -->
       <div class="car-right-sidebar d-none d-xl-block"></div>
     </main>
