New left sidebar

--- a/main-files/dashboard/index.html
+++ b/main-files/dashboard/index.html
@@ -79,9 +79,9 @@
 
     <main class="d-flex car-dashboard-section">
       <!-- left sidebar -->
-      <div class="car-left-sidebar d-none d-lg-block"></div>
+      <div class="left-sidebar d-none d-xl-flex"></div>
       <!-- middle and main content -->
-      <div class="container-fluid car-dashboard-content w-100">
+      <div class="container-fluid p-0 car-dashboard-content w-100">
         <!-- header -->
         <nav
           class="car-dashboard-nav w-100 d-flex align-items-center justify-content-between"
@@ -668,7 +668,7 @@
       </div>
 
       <!-- right right sidebar -->
-      <div class="car-right-sidebar d-none d-xl-block"></div>
+      <div class="right-sidebar d-none d-xl-block"></div>
     </main>
 
     <!--<< All JS Plugins >>-->
