Fixed some indent

--- a/main-files/dashboard/test.html
+++ b/main-files/dashboard/test.html
@@ -278,6 +278,6 @@
       <!-- TopoJSON -->
       <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/3.0.2/topojson.min.js"></script>
       <!--<< Main.js >>-->
-      <script src="assets/js/main.js"></script>
+      <script src="assets/js/main.js" type="module"></script>
    </body>
 </html>
