Left side navbar updated

--- a/main-files/dashboard/test.html
+++ b/main-files/dashboard/test.html
@@ -78,12 +78,10 @@
                      >
                         <ul class="d-flex flex-column">
                            <li>
-                              <a href="#" class="active-sublist"
-                                 >Create With AI</a
-                              >
+                              <a href="#">Create With AI</a>
                            </li>
                            <li>
-                              <a href="#">Create New</a>
+                              <a href="#" class="active-sublist">Create New</a>
                            </li>
                            <li>
                               <a href="#">View All</a>
