--- a/main-files/dashboard/index.html
+++ b/main-files/dashboard/index.html
@@ -79,7 +79,233 @@
 
       <main class="d-flex car-dashboard-section">
          <!-- left sidebar -->
-         <div class="left-sidebar d-none d-xl-flex"></div>
+         <aside class="left-sidebar d-none d-xl-flex flex-column">
+            <div class="logo d-flex align-items-center justify-content-between">
+               <a href="index.html">
+                  <img src="assets/images/logo.png" alt="RevAuto" />
+               </a>
+               <button>
+                  <i class="fa-sharp fa-solid fa-angles-left color-primary"></i>
+               </button>
+            </div>
+
+            <div class="left-sidebar-list-container">
+               <ul class="d-flex flex-column gap-2">
+                  <li>
+                     <a
+                        href="index.html"
+                        class="active d-flex align-items-center justify-content-between"
+                     >
+                        <div class="before d-none"></div>
+                        <div class="d-flex align-items-center gap-2">
+                           <i class="fa-solid fa-grid-2 color-primary"></i>
+                           <span>Overview</span>
+                        </div>
+                        <i class="fa-sharp fa-solid fa-chevron-right"></i>
+                     </a>
+                  </li>
+
+                  <li>
+                     <a
+                        data-bs-toggle="collapse"
+                        href="#collapseProducts"
+                        role="button"
+                        class="d-flex align-items-center justify-content-between"
+                     >
+                        <div class="before d-none"></div>
+                        <div class="d-flex align-items-center gap-2">
+                           <i
+                              class="fa-sharp fa-light fa-bag-shopping color-primary"
+                           ></i>
+                           <span>Products</span>
+                        </div>
+                        <i class="fa-sharp fa-solid fa-chevron-right"></i>
+                     </a>
+
+                     <!-- collapse 1 -->
+                     <div
+                        class="collapse collapsed-items"
+                        id="collapseProducts"
+                     >
+                        <ul class="d-flex flex-column">
+                           <li>
+                              <a href="#">Create With AI</a>
+                           </li>
+                           <li>
+                              <a href="#" class="active-sublist">Create New</a>
+                           </li>
+                           <li>
+                              <a href="#">View All</a>
+                           </li>
+                           <li>
+                              <a href="#">Products Images</a>
+                           </li>
+                        </ul>
+                     </div>
+                  </li>
+
+                  <li>
+                     <a
+                        href="#"
+                        class="d-flex align-items-center justify-content-between"
+                     >
+                        <div class="before d-none"></div>
+                        <div class="d-flex align-items-center gap-2">
+                           <i
+                              class="fa-light fa-user fa-sharp color-primary"
+                           ></i>
+                           <span>Customers</span>
+                        </div>
+                        <i class="fa-sharp fa-solid fa-chevron-right"></i>
+                     </a>
+                  </li>
+
+                  <li>
+                     <a
+                        href="#"
+                        class="d-flex align-items-center justify-content-between"
+                     >
+                        <div class="before d-none"></div>
+                        <div class="d-flex align-items-center gap-2">
+                           <i
+                              class="fa-regular fa-square-list color-primary"
+                           ></i>
+                           <span>Orders</span>
+                        </div>
+                        <i class="fa-sharp fa-solid fa-chevron-right"></i>
+                     </a>
+                  </li>
+
+                  <li>
+                     <a
+                        href="#"
+                        class="d-flex align-items-center justify-content-between"
+                     >
+                        <div class="before d-none"></div>
+                        <div class="d-flex align-items-center gap-2">
+                           <i
+                              class="fa-light fa-bags-shopping color-primary"
+                           ></i>
+                           <span>Checkout</span>
+                        </div>
+                        <i class="fa-sharp fa-solid fa-chevron-right"></i>
+                     </a>
+                  </li>
+
+                  <li>
+                     <a
+                        href="#"
+                        class="d-flex align-items-center justify-content-between"
+                     >
+                        <div class="before d-none"></div>
+                        <div class="d-flex align-items-center gap-2">
+                           <i class="fa-solid fa-chart-mixed color-primary"></i>
+                           <span>Analytics</span>
+                        </div>
+                        <i class="fa-sharp fa-solid fa-chevron-right"></i>
+                     </a>
+                  </li>
+
+                  <li>
+                     <a
+                        href="#"
+                        class="d-flex align-items-center justify-content-between"
+                     >
+                        <div class="before d-none"></div>
+                        <div class="d-flex align-items-center gap-2">
+                           <i class="fa-light fa-truck-fast color-primary"></i>
+                           <span>Shipping</span>
+                        </div>
+                        <i class="fa-sharp fa-solid fa-chevron-right"></i>
+                     </a>
+                  </li>
+
+                  <li>
+                     <a
+                        href="#"
+                        class="d-flex align-items-center justify-content-between"
+                     >
+                        <div class="before d-none"></div>
+                        <div class="d-flex align-items-center gap-2">
+                           <i class="fa-light fa-speaker color-primary"></i>
+                           <span>Promotions</span>
+                        </div>
+                        <i class="fa-sharp fa-solid fa-chevron-right"></i>
+                     </a>
+                  </li>
+
+                  <li>
+                     <a
+                        href="#"
+                        class="d-flex align-items-center justify-content-between"
+                     >
+                        <div class="before d-none"></div>
+                        <div class="d-flex align-items-center gap-2">
+                           <i
+                              class="fa-regular fa-sack-dollar color-primary"
+                           ></i>
+                           <span>Shipping</span>
+                        </div>
+                        <i class="fa-sharp fa-solid fa-chevron-right"></i>
+                     </a>
+                  </li>
+
+                  <li>
+                     <a
+                        href="#"
+                        class="d-flex align-items-center justify-content-between"
+                     >
+                        <div class="before d-none"></div>
+                        <div class="d-flex align-items-center gap-2">
+                           <i
+                              class="fa-regular fa-user-headset color-primary"
+                           ></i>
+                           <span>Supports</span>
+                        </div>
+                        <i class="fa-sharp fa-solid fa-chevron-right"></i>
+                     </a>
+                  </li>
+
+                  <li>
+                     <a
+                        href="#"
+                        class="d-flex align-items-center justify-content-between"
+                     >
+                        <div class="before d-none"></div>
+                        <div class="d-flex align-items-center gap-2">
+                           <i
+                              class="fa-sharp fa-light fa-comments-question-check color-primary"
+                           ></i>
+                           <span>Feedback</span>
+                        </div>
+                        <i class="fa-sharp fa-solid fa-chevron-right"></i>
+                     </a>
+                  </li>
+
+                  <li>
+                     <a
+                        href="#"
+                        class="d-flex align-items-center justify-content-between"
+                     >
+                        <div class="before d-none"></div>
+                        <div class="d-flex align-items-center gap-2">
+                           <i class="fa-regular fa-gear color-primary"></i>
+                           <span>Settings</span>
+                        </div>
+                        <i class="fa-sharp fa-solid fa-chevron-right"></i>
+                     </a>
+                  </li>
+               </ul>
+            </div>
+
+            <div class="left-sidebar-user-options">
+               <button class="btn btn-primary block-content">
+                  <i class="fa-regular fa-arrow-right-from-bracket me-2"></i>
+                  Log out
+               </button>
+               <p class="text-center mt-2">&copy; 2025 RevAuto</p>
+            </div>
+         </aside>
          <!-- middle and main content -->
          <div class="container-fluid p-0 car-dashboard-content w-100">
             <!-- header -->
